agregando los bg de cada personaje

--- a/src/components/homePage/CharItem2.astro
+++ b/src/components/homePage/CharItem2.astro
@@ -32,7 +32,7 @@ const { currentLocale } = Astro;
         class:list={[" z-10"]}
       />
       <Image
-        src={bgImg}
+        src={char.bg}
         alt={"bg"}
         loading={"eager"}
         class={"absolute size-full object-cover rounded-t-xl"}
