--- a/src/components/pages/character/Char.astro
+++ b/src/components/pages/character/Char.astro
@@ -26,7 +26,7 @@ const { currentLocale } = Astro;
         transition:name={`char-img-${char.id}`}
       />
       <Image
-        src={bgImg}
+        src={char.bg}
         alt={"bg-roon"}
         class={"size-full object-cover absolute rounded-xl"}
         loading={'eager'}
