--- a/src/components/homePage/sections/CharSection.astro
+++ b/src/components/homePage/sections/CharSection.astro
@@ -17,14 +17,13 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <SectionContainer titles={i18n?.HomePage.CharSection.Title}>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full items-end gap-4 lg:gap-12">
+  <div
+    class="flex overflow-y-clip sm:grid sm:grid-cols-2 md:grid-cols-3 w-full items-end gap-4 lg:gap-12"
+  >
     {
       CHARACTERS.map((char, index) => {
-        console.log({ char: char.name, index });
-        const name = char.name
-
         return (
-          <CharItem link={cleanLink(currentLocale, char.id)} char={char}/>
+          <CharItem link={cleanLink(currentLocale, char.id)} char={char} />
         );
       })
     }
