--- a/src/components/homePage/sections/CharSection.astro
+++ b/src/components/homePage/sections/CharSection.astro
@@ -18,7 +18,7 @@ const i18n = getI18N({ currentLocale });
 
 <SectionContainer titles={i18n?.HomePage.CharSection.Title}>
   <div
-    class="flex overflow-y-clip sm:grid sm:grid-cols-2 md:grid-cols-3 w-full items-end gap-4 lg:gap-12"
+    class="flex overflow-x-auto sm:overflow-visible sm:grid sm:grid-cols-2 md:grid-cols-3 w-full items-end gap-4 lg:gap-12"
   >
     {
       CHARACTERS.map((char, index) => {
