--- a/src/layouts/CharacterLayout.astro
+++ b/src/layouts/CharacterLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from "astro:transitions";
 
 import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
@@ -7,15 +7,15 @@ import NavBar from "../components/NavBar.astro";
 import grapImg from "../../public/grap-image.jpg";
 import HeaderContainer from "../components/containers/HeaderContainer.astro";
 import type { CharacterType } from "../models/CharacterType";
+import ReturnButton from "../components/CharPage/ReturnButton.astro";
 
 interface Props {
   title: string;
-  char: CharacterType
+  char: CharacterType;
 }
 
 const { title } = Astro.props;
 const { currentLocale } = Astro;
-
 
 const description =
   "I Wani Hug that Gator! is a choice-driven narrative about teenagers struggling to find their way. Help Inco, loser highschooler extraordinaire, navigate his budding friendships (and romance!) while surviving being the only human in a dinosaur-filled school.";
@@ -43,71 +43,72 @@ const description =
   </head>
   <body class="flex flex-col items-center relative">
     <div class="bg-room object-cover w-screen h-screen fixed -z-10"></div>
-    <!-- <NavBar /> -->
-    <!-- <HeaderContainer /> -->
     <main
-      class="text-white flex flex-col justify-center items-center w-full pt-8
-    bg-gradient-to-t to-slate-700/75 via-emerald-950/75 
-    from-violet-950/75 backdrop-blur-lg min-h-screen pb-[100px]"
+      class="text-white flex flex-col justify-stretch items-center w-full md:pt-8
+    bg-gradient-to-t to-slate-700/75 via-emerald-950/75
+    from-violet-950/75 backdrop-blur-lg min-h-screen pb-[100px]
+    px-8
+    "
     >
+      <!-- <ReturnButton /> -->
+
       <slot />
     </main>
-    <Footer className="absolute bottom-0 left-0"/>
-  </body>
+    <Footer className="absolute bottom-0 left-0" />
+  </body><style is:global>
+    :root {
+      --accent: 136, 58, 234;
+      --accent-light: 224, 204, 250;
+      --accent-dark: 49, 10, 101;
+      --accent-gradient: linear-gradient(
+        45deg,
+        rgb(var(--accent)),
+        rgb(var(--accent-light)) 30%,
+        white 60%
+      );
+    }
+    html {
+      font-family: system-ui, sans-serif;
+      background: #13151a;
+      background-size: 224px;
+    }
+    code {
+      font-family:
+        Menlo,
+        Monaco,
+        Lucida Console,
+        Liberation Mono,
+        DejaVu Sans Mono,
+        Bitstream Vera Sans Mono,
+        Courier New,
+        monospace;
+    }
+
+    span {
+      --tw-text-opacity: 1;
+      color: rgb(34 197 94 / var(--tw-text-opacity));
+    }
+
+    .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+
+      /* Center slide text vertically */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
 </html>
-<style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-
-  span {
-    --tw-text-opacity: 1;
-    color: rgb(34 197 94 / var(--tw-text-opacity));
-  }
-
-  .swiper {
-    width: 100%;
-    height: 100%;
-  }
-
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-</style>
