--- a/src/components/containers/SectionContainer.astro
+++ b/src/components/containers/SectionContainer.astro
@@ -1,9 +1,10 @@
 ---
 interface Props {
   titles?: string;
+  id?: string;
 }
 
-const { titles } = Astro.props;
+const { titles, id = "" } = Astro.props;
 ---
 
 <section
@@ -11,7 +12,12 @@ const { titles } = Astro.props;
 >
   {
     titles && (
-      <h2 class="text-center font-bold text-3xl md:text-4xl mb-2 md:mb-0 text-green-400">{titles}</h2>
+      <h2
+        class="text-center font-bold text-3xl md:text-4xl mb-2 md:mb-0 text-green-400"
+        id={id}
+      >
+        {titles}
+      </h2>
     )
   }
   <slot />
