--- a/src/components/homePage/sections/CharSection.astro
+++ b/src/components/homePage/sections/CharSection.astro
@@ -16,7 +16,7 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<SectionContainer titles={i18n?.HomePage.CharSection.Title}>
+<SectionContainer titles={i18n?.HomePage.CharSection.Title} id="characters">
   <div
     class="flex overflow-x-auto sm:overflow-visible sm:grid sm:grid-cols-2 md:grid-cols-3 w-full items-end gap-4 lg:gap-12"
   >
