--- a/src/layouts/CharacterLayout.astro
+++ b/src/layouts/CharacterLayout.astro
@@ -46,7 +46,7 @@ const description =
     <main
       class="text-white flex flex-col justify-stretch items-center w-full md:pt-8
     bg-gradient-to-t to-slate-700/75 via-emerald-950/75
-    from-violet-950/75 backdrop-blur-lg min-h-screen pb-[100px]
+    from-violet-950/75 backdrop-blur-lg min-h-screen pb-[120px] md:pb-[100px]
     px-8
     "
     >
