--- a/src/components/pages/character/Char.astro
+++ b/src/components/pages/character/Char.astro
@@ -17,7 +17,10 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<CharacterLayout title={`${i18n?.Character.Presentation} ${char.name}!`} char={char}>
+<CharacterLayout
+  title={`${i18n?.Character.Presentation} ${char.name}!`}
+  char={char}
+>
   <ReturnButton />
   <div class="flex flex-col lg:grid lg:grid-cols-2">
     <div
@@ -46,7 +49,7 @@ const i18n = getI18N({ currentLocale });
       class="flex flex-col mt-4 md:mt-0 lg:px-4 [&>p]:bg-black/55 [&>p]:px-4 [&>p]:py-2 [&>p]:rounded-xl [&>p]:mb-4"
     >
       <h1 class="font-semibold text-4xl lg:px-2 mb-4">
-        Meet
+        {i18n?.Character.Presentation}
         <span class="font-bold" transition:name={`char-name-${char.id}`}
           >{char.name}</span
         >
@@ -58,5 +61,4 @@ const i18n = getI18N({ currentLocale });
       <p set:html={char[checkLanguage(currentLocale!)]?.text} />
     </div>
   </div>
-
 </CharacterLayout>
